Added controllers for Journal, User, and Admin entities