@@ -1,5 +1,7 @@
 package com.journal.Journal.service;
+import com.journal.Journal.dto.UserDTO;
 import com.journal.Journal.entity.User;
+import com.journal.Journal.repository.JournalEntryRepository;
 import com.journal.Journal.repository.UserRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.bson.types.ObjectId;
@@ -9,6 +11,7 @@ import org.springframework.stereotype.Service;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -16,40 +19,48 @@ import java.util.Optional;
 public class UserService {
     @Autowired
     private UserRepository userRepository;
+    @Autowired
+    private JournalEntryRepository journalEntryRepository;
     private static final BCryptPasswordEncoder bCryptPasswordEncoder = new BCryptPasswordEncoder();
 
-    public boolean saveNewUser(User user) {
+    //save user
+    public void saveUser(User user) {
         try {
-            user.setRoles(Arrays.asList("USER"));
+            user.setPassword(bCryptPasswordEncoder.encode(user.getPassword()));
+            user.setRoles(List.of("USER"));
             userRepository.save(user);
-            return true;
         } catch (Exception e) {
-            return false;
+            System.out.println(e);
         }
     }
-
+   //save admin
     public void saveAdmin(User user) {
         user.setRoles(Arrays.asList("USER", "ADMIN"));
         userRepository.save(user);
     }
 
-    public void saveUser(User user) {
-        user.setPassword(bCryptPasswordEncoder.encode(user.getPassword()));
-        user.setRoles(Arrays.asList("USER"));
-        userRepository.save(user);
-    }
 
-    public List<User> getAll() {
-        return userRepository.findAll();
+    public List<UserDTO> getAll() {
+        List<User> users = userRepository.findAll();
+        return users.stream()
+                .map(user -> new UserDTO(user.getId(),user.getUserName()))
+                .collect(Collectors.toList()).reversed();
     }
 
     public Optional<User> findById(ObjectId id) {
         return userRepository.findById(id);
     }
 
-    public void deleteById(ObjectId id) {
-        userRepository.deleteById(id);
+    public boolean deleteByUserName(String userName) {
+        boolean hasAdminRole = userRepository.findByUserName(userName).getRoles().stream().anyMatch(role-> role.equals("ADMIN"));
+        if(!hasAdminRole){
+            userRepository.findByUserName(userName).getJournalEntries().forEach(journalEntry -> journalEntryRepository.deleteById(journalEntry.getId()));
+            userRepository.deleteByUserName(userName);
+            return true;
+        }
+        return false;
     }
+
 
     public User findByUserName(String userName) {
         return userRepository.findByUserName(userName);
